# weather

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  data_pipeline.py  dataset.py  hyperparameter_search.py  modal_train.py  plotting.py  pyproject.toml  requirements.txt  stations.py  training.py  weather_LSTM.py  weather_common.py  weather_transformer.py
.claude/commands/: add-data-source.md  eval.md  new-model.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
tests/: test_common.py  test_forecasting.py
