[tool.poetry]
name = "weather"
version = "0.1.0"
description = "Stuttgart weather forecasting with PyTorch deep learning"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = ">=2.0"
pandas = ">=2.0"
numpy = ">=1.24"
scikit-learn = ">=1.3"
matplotlib = ">=3.7"
meteostat = ">=1.6"
joblib = ">=1.3"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
